Fix page break in Safari

--- a/app/javascript/styles/components/Tab.scss
+++ b/app/javascript/styles/components/Tab.scss
@@ -22,8 +22,11 @@
     }
     @media print {
       padding: 0;
-      break-after: page;
       position: relative;
+
+      &--break {
+        break-after: page;
+      }
     }
   }
 }
